crates/app/tests/snapshots/render__directory_table.snap
---
source: crates/app/tests/render.rs
expression: table
---
# `main.accounts`

## Columns

| Column | Type | Nullable | Default | Notes |
|---|---|---|---|---|
| `id` | `INTEGER` | no | - |  |
| `tenant_id` | `INTEGER` | no | - |  |
| `organization_slug` | `TEXT` | no | - |  |
| `email` | `TEXT` | yes | - | collate `NOCASE` |
| `balance_cents` | `INTEGER` | no | `0` |  |
| `normalized_email` | `TEXT` | yes | - | stored_generated; as `lower (email)` |


## Constraints

| Name | Kind | Columns | Details |
|---|---|---|---|
| `accounts_pk` | `primary_key` | `id` | -; autoincrement |
| - | `not_null` | `tenant_id` | - |
| - | `not_null` | `organization_slug` | - |
| `accounts_email_key` | `unique` | `email` | -; conflict `ignore` |
| - | `not_null` | `balance_cents` | - |
| `accounts_balance_check` | `check` | `balance_cents` | `balance_cents >= 0` |
| `accounts_organization_fk` | `foreign_key` | `tenant_id, organization_slug` | references `main.organizations(tenant_id, slug)`; update `cascade`, delete `restrict`; match `simple`; deferrable initially `deferred` |
| `accounts_email_check` | `check` | `` | `length (email) > 3` |


## Indexes

| Name | Terms | Unique | Origin / details | Predicate |
|---|---|---|---|---|
| `accounts_active_email_idx` | `tenant_id` ascending collate `BINARY`, `lower (email)` descending collate `NOCASE` | yes | `create_index` | `balance_cents >= 0` |
| `sqlite_autoindex_accounts_1` | `email` ascending collate `NOCASE` | yes | `unique_constraint` | - |


## SQLite

**Kind:** `ordinary`

Strict table.

```sql
CREATE TABLE accounts (
    id INTEGER CONSTRAINT accounts_pk PRIMARY KEY AUTOINCREMENT,
    tenant_id INTEGER NOT NULL,
    organization_slug TEXT NOT NULL,
    email TEXT COLLATE NOCASE CONSTRAINT accounts_email_key UNIQUE ON CONFLICT IGNORE,
    balance_cents INTEGER NOT NULL DEFAULT (0)
        CONSTRAINT accounts_balance_check CHECK (balance_cents >= 0),
    normalized_email TEXT GENERATED ALWAYS AS (lower(email)) STORED,
    CONSTRAINT accounts_organization_fk
        FOREIGN KEY (tenant_id, organization_slug)
        REFERENCES organizations
        MATCH simple
        ON UPDATE CASCADE
        ON DELETE RESTRICT
        DEFERRABLE INITIALLY DEFERRED,
    CONSTRAINT accounts_email_check CHECK (length(email) > 3)
) STRICT
```
